# mac-install

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yaml
src/: lib.rs
testdata/: README.md  test.pkg
